src/compiler/snapshots/isa__compiler__parser__tests__lists.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"[]\").parse_expr()"
---
Ok(
    Expr {
        kind: List(
            [],
        ),
        span: SpanData { file_id: 0, start: 0, end: 2 },
        ty: (),
    },
)
