src/compiler/snapshots/isa__compiler__parser__tests__numbers-5.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"5.0\").parse_expr()"
---
Ok(
    Expr {
        kind: Real(
            5.0,
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 3 },
        ty: (),
    },
)
