src/compiler/snapshots/isa__compiler__parser__tests__numbers-6.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"1.2\").parse_expr()"
---
Ok(
    Expr {
        kind: Real(
            1.2,
        ),
        span: SpanData { file_id: 0, start: 0, end: 3 },
        ty: (),
    },
)
