src/compiler/snapshots/isa__compiler__parser__tests__numbers-7.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"111.2\").parse_expr()"
---
Ok(
    Expr {
        kind: Real(
            111.2,
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 5 },
        ty: (),
    },
)
