src/compiler/snapshots/isa__compiler__parser__tests__numbers.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"0000\").parse_expr()"
---
Ok(
    Expr {
        kind: Int(
            0,
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 4 },
        ty: (),
    },
)
