src/compiler/snapshots/isa__compiler__parser__tests__strings-4.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"ba5\\t\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "ba5\t",
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
